Добавили загрузку данных из json файла

--- a/insta-react/public/index.html
+++ b/insta-react/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#000000" />
     
     <title>Insta Pokemon</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=cyrillic-ext" rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
